--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run serve:single-spa:Hybrid_jsplusts",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:single-spa:Hybrid_jsplusts": "ng build Hybrid_jsplusts --configuration production",
+    "serve:single-spa:Hybrid_jsplusts": "ng s --project Hybrid_jsplusts --disable-host-check --port 7001 --live-reload false"
   },
   "private": true,
   "dependencies": {
@@ -24,10 +26,13 @@
     "angular-resource": "^1.5.11",
     "angular-route": "^1.5.11",
     "rxjs": "~7.8.0",
+    "single-spa": ">=4.0.0",
+    "single-spa-angular": "^8.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^16.0.1",
     "@angular-devkit/build-angular": "^16.2.1",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
@@ -40,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "style-loader": "^3.3.1",
     "typescript": "~5.1.3"
   }
 }
