--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:single-spa:Hybrid_jsplusts": "ng build Hybrid_jsplusts --configuration production",
+    "build:single-spa:Hybrid_jsplusts": "ng build Hybrid_jsplusts --configuration production --deploy-url http://localhost:3000/hybrid-jsplusts/",
     "serve:single-spa:Hybrid_jsplusts": "ng s --project Hybrid_jsplusts --disable-host-check --host 127.0.0.1 --port 7001 --live-reload false"
   },
   "private": true,
