added the downgrade module base via two level bootstraping

--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,19 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/app"
+              "src/app",
+              "src/app-ajs"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/angular/angular.js",
+              "./node_modules/angular-animate/angular-animate.js",
+              "./node_modules/angular-resource/angular-resource.js",
+              "./node_modules/angular-route/angular-route.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -88,9 +95,15 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/angular/angular.js",
+              "./node_modules/angular-animate/angular-animate.js",
+              "./node_modules/angular-resource/angular-resource.js",
+              "./node_modules/angular-route/angular-route.js"
+            ]
           }
         }
       }
