Revert "added the downgrade module base via two level bootstraping"
This reverts commit 213e53eb567441d5186dc2fc4581a6ba5a1f8e02.

--- a/angular.json
+++ b/angular.json
@@ -23,19 +23,12 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/app",
-              "src/app-ajs"
+              "src/app"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "./node_modules/angular/angular.js",
-              "./node_modules/angular-animate/angular-animate.js",
-              "./node_modules/angular-resource/angular-resource.js",
-              "./node_modules/angular-route/angular-route.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -95,15 +88,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "./node_modules/angular/angular.js",
-              "./node_modules/angular-animate/angular-animate.js",
-              "./node_modules/angular-resource/angular-resource.js",
-              "./node_modules/angular-route/angular-route.js"
-            ]
+            "scripts": []
           }
         }
       }
