--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,12 +9,6 @@
     "src/main.ts"
   ],
   "include": [
-    "src/**/*.d.ts",
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "src/test.ts",
-    "src/**/*.spec.ts",
-    "src/environemnts/*.*.ts"
+    "src/**/*.d.ts"
   ]
 }
